2007-03-20  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/plot.R (plot.igraph) :
	bug corrected, arrows were drawn improperly when any(edge.lty!=1)

2007-03-19  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/plot.R (rglplot.igraph) :
	suspend updating while plotting the graph

	* interfaces/R/igraph/R/plot.R (rglplot.igraph) :
	1) plotting edges as boxes
	2) plotting arrows 
	3) arrow.mode argument added
	4) layout argument can be a 2d layout as well
	5) warnings about labels and edge.labels eliminated
	6) the '00' label bug corrected 

2007-03-17  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/games.R (barabasi.game) : bug corrected,
	call nonlinear game is zero.appeal is not 1

	* interfaces/R/src/rinterface.c (R_igraph_measure_dynamics_ditedcat) :
	bug corrected, sd was never calculated

2007-03-16  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/measure.dynamics.R 
	(measure.dynamics.citingcat.citedcat) : added
	* interfaces/R/src/rinterface.c
	(R_igraph_measure_dynamics_citingcat_citedcat)
	(R_igraph_measure_dynamics_citingcat_citedcat_st) : added

2007-03-14  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/games.R (citing.cited.type.game) : added
	* interfaces/R/src/rinterface.c (R_igraph_citing_cited_type_game)
	: added

	* interfaces/R/igraph/R/games.R (cited.type.game) : added
	* interfaces/R/src/rinterface.c (R_igraph_cited_type_game) : added

	* interfaces/R/igraph/R/measure.dynamics.R (measure.dynamics.citedcat) :
	added
	* interfaces/R/src/rinterface.c (R_igraph_measure_dynamics_citedcat)
	(R_igraph_measure_dynamics_citedcat_st) : added

2007-03-12  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/measure.dynamics.R (measure.dynamics.id)
	(measure.dynamics.idage, measure.dynamics.lastcit) : (re)added 'number'
	argument
	(measure.dynamics.lastcit) : added 'norm.method' argument

	* interfaces/R/src/rinterface.c (R_igraph_measure_dynamics_id)